--- a/k8s_folders_specified_valid_yaml_and_invalid_yaml/k8s_no_issues/k8s_no_issues.yml
+++ b/k8s_folders_specified_valid_yaml_and_invalid_yaml/k8s_no_issues/k8s_no_issues.yml
@@ -19,3 +19,5 @@ spec:
         image: nginx:1.14.2
         ports:
         - containerPort: 80
+
+# Modified [k8s_no_issues.yml] on [2020-12-04 16:23:03.975044]
